Turtle graphics basic version. - commands: forward, backward, left, right - repeat command but without handling brackets

--- a/l01/zad1/turtle.html
+++ b/l01/zad1/turtle.html
@@ -2,8 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <script src="logo.js"></script>
-        <link rel="stylesheet" href="logo.css">
+        <script src="../Turtle.js" type="module"></script>
+        <script src="turtle.js" type="module"></script>
+        <link rel="stylesheet" href="turtle.css">
         <title>Logo</title>
     </head>
     <body>
