--- a/l01/zad1/turtle.html
+++ b/l01/zad1/turtle.html
@@ -2,7 +2,6 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <script src="../Turtle.js" type="module"></script>
         <script src="turtle.js" type="module"></script>
         <link rel="stylesheet" href="turtle.css">
         <title>Logo</title>
@@ -30,6 +29,10 @@
                         <li>down</li>
                     </ul>
                 </p>
+                <input type="range" min="1" max="8" value="5" id="degreeSlider">
+                <button id="hilbertButton">
+                    Hilbert
+                </button>
             </div>
         </main>
     </body>
