--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <ul>
             <li><a href="l01/zad1/turtle.html">Turtle Graphics</a></li>
             <li><a href="l01/zad3/hilbertSvg.html">Krzywa Hilberta</a></li>
+            <li><a href="l01/zad4/wireFrame.html">WireFrame</a></li>
         </ul>
     </body>
 </html>
