--- a/l01/zad4/wireFrame.html
+++ b/l01/zad4/wireFrame.html
@@ -13,6 +13,7 @@
                 <button id="perspectiveButton">Perspective</button>
                 <button id="orthographicButton">Orthographic</button>
             </div>
+            <input hidden="true" type="range" id="distanceSlider" min="10" max="200" value="200">
         </main>
     </body>
 </html>
