Test obiektów geometrycznych w WebGL.

--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <style>
-            * {
-                font-family: monospace;
-            }
-        </style>
-        <title>Grafkika</title>
-    </head>
-    <body>
-        <h2>Lista pierwsza</h2>
-        <ul>
-            <li><a href="l01/zad1/turtle.html">Turtle Graphics</a></li>
-            <li><a href="l01/zad3/hilbertSvg.html">Krzywa Hilberta</a></li>
-            <li><a href="l01/zad4/wireFrame.html">WireFrame</a></li>
-        </ul>
-    </body>
+  <head>
+    <style>
+      * {
+        font-family: monospace;
+      }
+    </style>
+    <title>Grafkika</title>
+  </head>
+  <body>
+    <h2>Lista pierwsza</h2>
+    <ul>
+      <li><a href="l01/zad1/turtle.html">Turtle Graphics</a></li>
+      <li><a href="l01/zad3/hilbertSvg.html">Krzywa Hilberta</a></li>
+      <li><a href="l01/zad4/wireFrame.html">WireFrame</a></li>
+    </ul>
+    <h2>Lista pierwsza</h2>
+    <ul>
+      <li><a href="l02/zad1/zad1.html">Test WebGL</a></li>
+    </ul>
+  </body>
 </html>
