Rysowanie krzywej Hilberta za pomocą WebGL.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     </ul>
     <h2>Lista pierwsza</h2>
     <ul>
-      <li><a href="l02/zad1/zad1.html">Test WebGL</a></li>
+      <li><a href="l02/zad1/zad1.html">WebGL Demo</a></li>
+      <li><a href="l02/zad2/zad2.html">Krzywa Hilberta w WebGL</a></li>
     </ul>
   </body>
 </html>
