--- a/l02/zad1/index.html
+++ b/l02/zad1/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <script src="zad1.js" type="module"></script>
-    <link rel="stylesheet" href="zad1.css" />
+    <script src="demo.js" type="module"></script>
+    <link rel="stylesheet" href="../shared/style.css" />
     <title>WebGL Demo</title>
   </head>
   <body>
