--- a/l02/zad2/index.html
+++ b/l02/zad2/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <script src="zad2.js" type="module"></script>
-    <link rel="stylesheet" href="zad2.css" />
+    <script src="hilbert.js" type="module"></script>
+    <link rel="stylesheet" href="../shared/style.css" />
     <title>WebGL Hilbert</title>
   </head>
   <body>
