--- a/l02/zad2/index.html
+++ b/l02/zad2/index.html
@@ -7,8 +7,13 @@
     <title>WebGL Hilbert</title>
   </head>
   <body>
-    <label id="degreeLabel" for="degreeSlider"></label>
-    <input id="degreeSlider" type="range" min="1" max="8" value="5">
+    <div id="controls">
+      <div id="degree">
+        <label id="degreeLabel" for="degreeSlider"></label>
+        <input id="degreeSlider" type="range" min="1" max="8" value="5" />
+      </div>
+      <button id="newHilbertButton">Draw Hilbert</button>
+    </div>
     <canvas id="canvas"> </canvas>
   </body>
 </html>
