Refactorowańsko coś tam coś tam

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <li><a href="l01/zad3/hilbertSvg.html">Krzywa Hilberta</a></li>
       <li><a href="l01/zad4/wireFrame.html">WireFrame</a></li>
     </ul>
-    <h2>Lista pierwsza</h2>
+    <h2>Lista druga</h2>
     <ul>
       <li><a href="l02/zad1/index.html">WebGL Demo</a></li>
       <li><a href="l02/zad2/index.html">Krzywa Hilberta w WebGL</a></li>
