--- a/l02/zad2/index.html
+++ b/l02/zad2/index.html
@@ -12,9 +12,16 @@
         <label id="degreeLabel" for="degreeSlider"></label>
         <input id="degreeSlider" type="range" min="1" max="8" value="5" />
       </div>
-      <input id="colorPicker" type="color" value="#213769"/>
       <button id="newHilbertButton">Draw Hilbert</button>
     </div>
     <canvas id="canvas"> </canvas>
+    <h3>Controls</h3>
+    <ul>
+      <li>arrows : move</li>
+      <li>j, l : switch curves</li>
+      <li>q, e : rotate</li>
+      <li>w, s : change depth</li>
+      <li>-, + : scale</li>
+    </ul>
   </body>
 </html>
