WebGL game first attempt GWIAZDKI MORDO

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <ul>
       <li><a href="l02/zad1/index.html">WebGL Demo</a></li>
       <li><a href="l02/zad2/index.html">Krzywa Hilberta w WebGL</a></li>
+      <li><a href="l02/zad3/index.html">Gra</a></li>
     </ul>
   </body>
 </html>
