NAPRAWIAŃSKO, JAKIMS CUDEM JUZ DZIALA

--- a/l02/zad3/index.html
+++ b/l02/zad3/index.html
@@ -8,9 +8,6 @@
   </head>
   <body>
     <canvas id="canvas" class="game"> </canvas>
-    <h3>Controls</h3>
-    <ul>
-      <li>arrows : move</li>
-    </ul>
+    <h3>⇽ ⇾ to move </h3>
   </body>
 </html>
