--- a/l02/zad3/index.html
+++ b/l02/zad3/index.html
@@ -7,6 +7,7 @@
     <title>DeadSpace Invaders</title>
   </head>
   <body>
+    <h2>DeadSpace Invaders</h2>
     <canvas id="canvas" class="game"> </canvas>
     <h3>⇽ ⇾ to move </h3>
   </body>
