--- a/l02/zad3/index.html
+++ b/l02/zad3/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="deadSpaceInvaders.js" type="module"></script>
     <link rel="stylesheet" href="../shared/style.css" />
     <title>DeadSpace Invaders</title>
@@ -9,6 +10,6 @@
   <body>
     <h2>DeadSpace Invaders</h2>
     <canvas id="canvas" class="game"> </canvas>
-    <h3>⇽ ⇾ to move </h3>
+    <h3 id="desktopInfo">⇽ ⇾ to move</h3>
   </body>
 </html>
