Space Garbage Collector XDDD

--- a/l02/zad3/index.html
+++ b/l02/zad3/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="deadSpaceInvaders.js" type="module"></script>
     <link rel="stylesheet" href="../shared/style.css" />
-    <title>DeadSpace Invaders</title>
+    <title>Space Garbage Collector</title>
   </head>
   <body>
-    <h2>DeadSpace Invaders</h2>
+    <h2>Space Garbage Collector</h2>
+    <h3 id="scoreBoard">score: 0</h3>
     <canvas id="canvas" class="game"> </canvas>
     <h3 id="desktopInfo">⇽ ⇾ to move</h3>
   </body>
