--- a/l02/zad3/index.html
+++ b/l02/zad3/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="game">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,8 +8,8 @@
     <title>Space Garbage Collector</title>
   </head>
   <body>
-    <h2>Space Garbage Collector</h2>
-    <h3 id="scoreBoard">score: 0</h3>
+    <h1>Space Garbage Collector</h1>
+    <h2 id="scoreBoard">score: 0</h2>
     <canvas id="canvas" class="game"> </canvas>
     <h3 id="desktopInfo">⇽ ⇾ to move</h3>
   </body>
