--- a/l03/cube-mipmap/index.html
+++ b/l03/cube-mipmap/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html id="htmlId">
   <head>
-    <title>cube</title>
+    <title>cube minimap</title>
   </head>
   <body>
     <canvas id="canvasGL"></canvas>
