--- a/index.html
+++ b/index.html
@@ -21,5 +21,13 @@
       <li><a href="l02/zad2/index.html">Krzywa Hilberta w WebGL</a></li>
       <li><a href="l02/zad3/index.html">Gra</a></li>
     </ul>
+    <h2>Lista trzecia</h2>
+    <ul>
+      <li><a href="l03/cube/index.html">1</a></li>
+      <li><a href="l03/cube-mipmap/index.html">2</a></li>
+      <li><a href="l03/graph/1/index.html">3</a></li>
+      <li><a href="l03/graph/2/index.html">4</a></li>
+      <li><a href="l03/graph/3/index.html">5</a></li>
+    </ul>
   </body>
 </html>
